--- a/src/components/Created/Created.css
+++ b/src/components/Created/Created.css
@@ -2,6 +2,7 @@
   margin-top: 51px;
   margin-left: 260px;
   margin-bottom: 51px;
+  margin-right: 25px;
 }
 
 .mylinks h1 {
@@ -23,6 +24,7 @@
 .allLinks {
   margin-top: 31px;
   color: white;
+  /* width: 1100px; */
 }
 
 .flexLink {
@@ -35,7 +37,7 @@
 
 .singleLink {
   background-color: #3f414b;
-  width: 1100px;
+  width: 100%;
   padding: 19px 27px;
   border-radius: 5px;
   margin-bottom: 15px;
@@ -53,6 +55,7 @@
 .delete {
   display: flex;
   justify-content: flex-end;
+  margin-top: 25px;
 }
 
 .delete svg {
@@ -70,9 +73,16 @@
 }
 
 .longUrl {
-  max-width: 930px;
+  /* max-width: 930px; */
+  max-width: 80%;
   word-wrap: break-word;
   margin-left: 80px !important;
+}
+
+.shortUrl {
+  max-width: 80%;
+  word-wrap: break-word;
+  margin-left: 128px !important;
 }
 
 .longUrlP {
@@ -97,4 +107,31 @@
 
 .noLinks a {
   color: #7271f3;
+}
+
+@media (min-width: 0px) and (max-width: 653px) {
+  .mylinks {
+    margin-left: 25px;
+    margin-right: 25px;
+  }
+}
+
+@media (min-width: 0px) and (max-width: 394px) {
+  .longUrl {
+    max-width: 67%;
+  }
+  .shortUrl {
+    max-width: 52%;
+  }
+}
+
+@media (min-width: 0px) and (max-width: 1024px) {
+  .mylinks {
+    margin-left: 25px;
+    margin-right: 25px;
+  }
+
+  .noLinks {
+    width: 100%;
+  }
 }
